--- a/src/formula_1_analytics/main/templates/main/result.html
+++ b/src/formula_1_analytics/main/templates/main/result.html
@@ -6,35 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/main.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   </head>
+
   <body>
-    <table class="table table-dark table-borderless">
+
+
+    <table class="table table-dark table-borderless result-table">
       <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Number</th>
+          <th scope="col">Grid</th>
+          <th scope="col">Position</th>
+          <th scope="col">Points</th>
+          <th scope="col">Laps</th>
+          <th scope="col">Time</th>
+          <th scope="col">Fastest Lap</th>
+          <th scope="col">Fastest Lap Time</th>
+          <th scope="col">Fastest Lap Speed</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+    </table>
 
-          <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
-          </tr>
+    {{ values_dict }}
+    
 
-          <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
-          </tr>
-        </thead>
-  </table>
-
-    {{ keywords_dict }}
   </body>
 </html>
