--- a/src/formula_1_app/main/templates/main/search.html
+++ b/src/formula_1_app/main/templates/main/search.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load poll_extras %}
 
 <html>
 
@@ -150,6 +149,7 @@
 
           </div>
 
+          
           <div class="col-md-4">
 
             Race Info
@@ -307,7 +307,7 @@
 
 
     {% if result_list %}
-      <table class="table table-dark table-borderless result-table">
+      <table class="table table-bordered table-dark result-table">
         <thead>
           <tr>
             <th scope="col"></th>
