--- a/src/formula_1_app/main/static/main/css/main.css
+++ b/src/formula_1_app/main/static/main/css/main.css
@@ -1061,6 +1061,9 @@ legend {
   background: #fff;
   transition: all .2s ease-out, color .2s ease-out;
   
+  font-size: 13px;
+  font-family: 'Poppins', sans-serif;
+
   position: absolute;
   bottom: 15;
   right: 15;
@@ -1081,4 +1084,12 @@ legend {
 .result-table {
   font-size: 13px;
   font-family: 'Poppins', sans-serif;
+}
+
+.login_art {
+  position: absolute;
+  bottom: 0;
+  left: 50px;
+  height: 100%;
+  width: 45%;
 }
