--- a/src/formula_1_app/main/templates/main/search.html
+++ b/src/formula_1_app/main/templates/main/search.html
@@ -2,7 +2,6 @@
 
 <html>
 
-
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,9 +11,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
-
   <body>
     
+    {% if error %}
+
+      <div class="s003">
+        <div class="text-my">
+          {{ error }}
+        </div>
+      </div>
+
+    {% else %}
 
     <div class="s003">
       
@@ -22,6 +29,11 @@
       <form action="/main/search/" method="post">
         {% csrf_token %}
 
+        <div class="col-md-4 offset-md-8 d-flex justify-content-end">
+          <div class="text-my">
+            <a href="http://127.0.0.1:8000/main/login/">Log out</a>
+          </div>
+        </div>
 
         <div class="row">
 
@@ -305,9 +317,10 @@
 
     </div>
 
+    {% endif %}
 
     {% if result_list %}
-      <table class="table table-bordered table-dark result-table">
+      <table class="table result-table">
         <thead>
           <tr>
             <th scope="col"></th>
@@ -329,14 +342,12 @@
           <tr>
             <th></th>
             {% for value in result %}            
-              <th>{{ value }}</th>
+              <th bgcolor="black">{{ value }}</th>
             {% endfor %}
           </tr>
         {% endfor %}
       </table>
     {% endif %}
-
-
 
   </body>
 
