--- a/src/formula_1_app/main/static/main/css/main.css
+++ b/src/formula_1_app/main/static/main/css/main.css
@@ -1055,12 +1055,8 @@ legend {
 
 
 .result-table {
-  background-color: #000;
-  border-color: #a9a9a94f;
-
   font-size: 13px;
   font-family: 'Poppins', sans-serif;
-  color: white;
 }
 
 .login_art {
@@ -1157,6 +1153,12 @@ legend {
   font-size: 14px;
   font-family: 'Poppins', sans-serif; 
   color:rgb(150, 150, 150)
+}
+
+.text-profile-my {
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif; 
+  color:white
 }
 
 a:link {
